--- a/style.css
+++ b/style.css
@@ -1,19 +1,39 @@
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,500';
 
-head {
-  margin-left: auto;
-  margin-right: auto;
-
-  color: #444;
+body {
+    font-family: "Open Sans", "Helvetica", sans-serif;
 }
 
-body {
+header {
+  background-image: url("assets/header.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  padding: 7vw 2em;
+  line-height: 1.2;
+
+  text-align: center;
+  color: white;
+}
+
+header a {
+  color: white;
+}
+
+header h1, header p {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 40em;
+
+  color: white;
+}
+
+main {
   margin: 10 auto;
   margin-left: auto;
   margin-right: auto;
   max-width: 50em;
-
-  font-family: "Open Sans", "Helvetica", sans-serif;
 
   line-height: 1.5;
   padding-top: 4em;
