--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #222;
 }
 
+section {
+  padding-bottom: 2em;
+}
+
 a {
   color: #0b1671;
 }
@@ -70,6 +74,6 @@ code {
 }
 
 pre {
-  padding: 1em;
+  padding: .5em 1em;
   border-left: 2px solid #69c;
 }
