--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-  background-image: url("assets/header.png");
+  background-image: url("assets/header.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
